2006-09-25  Casey Marshall  <csm@gnu.org>

	* gnu/java/nio/FileChannelImpl.java (read): revert back to using
	`readScattering.'
	(write): revert back to using `writeGathering.'
	* vm/reference/gnu/java/nio/VMChannel.java (writeGathering): find
	the first buffer that has data remaining, and start at that one.

2006-09-25  Tom Tromey  <tromey@redhat.com>

	* native/jni/gconf-peer/Makefile.am (libgconfpeer_la_LDFLAGS): New
	variable.

2006-09-25  Tom Tromey  <tromey@redhat.com>

	* tools/.cvsignore: Updated.

2006-09-25  Tom Tromey  <tromey@redhat.com>

	PR libgcj/29178:
	* gnu/java/nio/charset/US_ASCII.java (Encoder.canEncode): New method.
	(Encoder.canEncode): Likewise.
	(Encoder.encodeLoop): Return unmappable for all non-ASCII characters.
	* gnu/java/nio/charset/ByteCharset.java (Encoder.canEncode): New
	method.
	(Encoder.canEncode): Likewise.
	* gnu/java/nio/charset/ISO_8859_1.java (Encoder.canEncode): New
	method.
	(Encoder.canEncode): Likewise.

2006-09-25  Tom Tromey  <tromey@redhat.com>

	* native/fdlibm/mprec.c (mprec_calloc): Renamed.
	(Balloc): Updated.

2006-09-25  Francis Kung  <fkung@redhat.com>

	* java/awt/image/ColorModel.java
	(coerceData): Made abstract.
	(coerceDataWorker): New protected method.
	* java/awt/image/ComponentColorModel.java
	(coerceData): Return new instance of proper ColorModel.
	* java/awt/image/DirectColorModel.java
	(coerceData): Return new instance of proper ColorModel.
	* java/awt/image/IndexColorModel.java
	(coerceData): New method.

2006-09-24  Casey Marshall  <csm@gnu.org>

	* gnu/java/nio/FileChannelImpl.java
	(read): call `read' in a loop, don't use `readScattering.'
	(write): call `write' in a loop, don't use `writeGathering.'

2006-09-24  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Move -pedantic from WARNING to STRICT flags.

2006-09-24  Jeroen Frijters  <jeroen@frijters.net>

	* java/nio/channels/spi/AbstractSelectableChannel.java
	(register): Set interestOps and attachment when the key already
	exists.
